--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "chapter2-backend",
+  "name": "asiatravelplan-backend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "description": "Milestone 1 backend for Chapter2 lead and CRM core",
+  "description": "Milestone 1 backend for AsiaTravelPlan lead and CRM core",
   "dependencies": {
     "jose": "^5.9.6"
   },
