--- a/.env.staging.example
+++ b/.env.staging.example
@@ -8,7 +8,7 @@ KEYCLOAK_CLIENT_ID=asiatravelplan-backend
 KEYCLOAK_CLIENT_SECRET=CHANGE_ME_KEYCLOAK_CLIENT_SECRET
 KEYCLOAK_REDIRECT_URI=https://staging.asiatravelplan.com/auth/callback
 KEYCLOAK_POST_LOGOUT_REDIRECT_URI=https://staging.asiatravelplan.com/
-KEYCLOAK_ALLOWED_ROLES=admin,staff
+KEYCLOAK_ALLOWED_ROLES=atp_admin,atp_manager,atp_accountant,atp_staff
 KEYCLOAK_GLOBAL_LOGOUT=true
 RETURN_TO_ALLOWED_ORIGINS=https://staging.asiatravelplan.com,https://api-staging.asiatravelplan.com
 
@@ -16,3 +16,9 @@ KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=CHANGE_ME_KEYCLOAK_ADMIN_PASSWORD
 POSTGRES_USER=keycloak
 POSTGRES_PASSWORD=CHANGE_ME_POSTGRES_PASSWORD
+
+STAGING_ACCESS_ENABLED=true
+STAGING_ACCESS_PASSWORD=CHANGE_ME_STAGING_PASSWORD
+STAGING_ACCESS_COOKIE_SECRET=CHANGE_ME_STAGING_COOKIE_SECRET
+STAGING_ACCESS_COOKIE_NAME=asiatravelplan_staging_access
+STAGING_ACCESS_MAX_AGE_SECONDS=2592000
