--- a/.env.staging.example
+++ b/.env.staging.example
@@ -17,6 +17,10 @@ KEYCLOAK_ADMIN_PASSWORD=CHANGE_ME_KEYCLOAK_ADMIN_PASSWORD
 POSTGRES_USER=keycloak
 POSTGRES_PASSWORD=CHANGE_ME_POSTGRES_PASSWORD
 
+MOBILE_MIN_SUPPORTED_APP_VERSION=1.0.0
+MOBILE_LATEST_APP_VERSION=1.0.0
+MOBILE_FORCE_UPDATE=false
+
 STAGING_ACCESS_ENABLED=true
 STAGING_ACCESS_PASSWORD=CHANGE_ME_STAGING_PASSWORD
 STAGING_ACCESS_COOKIE_SECRET=CHANGE_ME_STAGING_COOKIE_SECRET
