--- a/mobile/iOS/AsiaTravelPlan.xcodeproj/xcshareddata/xcschemes/AsiaTravelPlan.xcscheme
+++ b/mobile/iOS/AsiaTravelPlan.xcodeproj/xcshareddata/xcschemes/AsiaTravelPlan.xcscheme
@@ -40,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B6FCAA37A436E8B5E87152AE"
+            BuildableName = "AsiaTravelPlan.app"
+            BlueprintName = "AsiaTravelPlan"
+            ReferencedContainer = "container:AsiaTravelPlan.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
