--- a/mobile/iOS/Resources/Info.plist
+++ b/mobile/iOS/Resources/Info.plist
@@ -16,6 +16,8 @@
   <string>APPL</string>
   <key>CFBundleShortVersionString</key>
   <string>1.0</string>
+  <key>CFBundleDisplayName</key>
+  <string>Asia Travel Plan</string>
   <key>CFBundleURLTypes</key>
   <array>
     <dict>
