--- a/mobile/iOS/Resources/Info.plist
+++ b/mobile/iOS/Resources/Info.plist
@@ -38,7 +38,7 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIImageName</key>
-		<string>BrandLogo</string>
+		<string>BrandMark</string>
 	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
